syntax = "proto3";

package quary.service.v1;

option java_multiple_files = true;

// TableAddress is a struct that represents a table in a database. It contains the name of the table and the full path.
message TableAddress {
  string name = 1;
  string full_path = 2;
}
